@@ -391,6 +391,9 @@ Trunk (unreleased changes)
     HDFS-1827. Fix timeout problem in TestBlockReplacement.  (Matt Foley
     via szetszwo)
 
+    HDFS-1818. TestHDFSCLI is failing on trunk after HADOOP-7202.
+    (Aaron T. Myers via todd)
+
     HDFS-1908. Fix a NullPointerException in fi.DataTransferTestUtil.
     (szetszwo)
 
